# spreadx-extract-py

./: .gitignore  app.py  config.py  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
claude/: extract.py  extract_notes.py  extract_vision.py
export/: xlsx_export.py
models/: column.py  extraction.py  page.py
pdf/: column_classifier.py  page_classifier.py  page_filter.py  page_rasterizer.py  scope_detector.py  statement_classifier.py
pipeline/: orchestrator.py
tests/: conftest.py
tests/integration/: test_claude_extract.py  test_claude_notes.py  test_full_pipeline.py  test_pdf_digital.py  test_pdf_scanned.py  test_streamlit_smoke.py
tests/regression/: test_regression_cases.py
tests/unit/: test_adaptive_dpi.py  test_column_classifier.py  test_concat_extraction.py  test_dpi_reuse_fix.py  test_extract_mocked.py  test_hybrid_detection.py  test_models.py  test_note_parser.py  test_orchestrator_mocked.py  test_page_classifier.py  test_page_filter.py  test_robust_prompt.py  test_rotation_detection.py  test_scope_detector.py  test_statement_classifier.py  test_text_segmentation.py  test_vision_fallback.py  test_vision_prompt.py  test_xlsx_export.py  test_year_parser.py
